[package]
name = "procfusion"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
anyhow = "1.0.83"

tokio = { version = "1.37.0", features = ["full"] }
tokio-stream = { version = "0.1.15", features = ["io-util"] }

serde = { version = "1.0.201", features = ["derive"] }
toml = "0.8.12"
alogfmt = "0.1.0"

command-group = { version = "5.0.1", features = ["with-tokio"] }
chrono = { version = "0.4.38", features = ["serde"] }
