[package]
name = "procfusion"
version = "0.2.0"
edition = "2021"

[profile.release]
panic = "abort"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
anyhow = "1.0.89"

tokio = { version = "1.40.0", features = ["full"] }
tokio-stream = { version = "0.1.16", features = ["io-util"] }

serde = { version = "1.0.210", features = ["derive"] }
toml = "0.8.19"
alogfmt = "0.1.0"

command-group = { version = "5.0.1", features = ["with-tokio"] }
chrono = { version = "0.4.38", features = ["serde"] }
shell-words = "1.1.0"
